--- a/theme4w4/sass/local/_galerie.scss
+++ b/theme4w4/sass/local/_galerie.scss
@@ -3,6 +3,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     margin: 3%;
+    justify-content: space-between;
 
     .flip-card {
         background-color: transparent;
