ajout photos projets personnels

--- a/theme4w4/sass/style.scss
+++ b/theme4w4/sass/style.scss
@@ -123,6 +123,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------- */
 @import "local/galerie";
 
+/* local galerie personnelle
+--------------------------------------------- */
+//@import "local/galerie-personnelle";
+
 /* local footer
 --------------------------------------------- */
 @import "local/footer";
