--- a/theme4w4/style.css
+++ b/theme4w4/style.css
@@ -1573,6 +1573,8 @@ header .entry-title {
   font-size: 0.7rem;
 }
 
+/* local galerie personnelle
+--------------------------------------------- */
 /* local footer
 --------------------------------------------- */
 site-branding, #primary, #colophon {
