--- a/theme4w4/style.css
+++ b/theme4w4/style.css
@@ -1229,6 +1229,25 @@ Liste des blocs de cours par type_de_cours
   }
 }
 
+.accueil {
+  font-size: clamp(0.7rem, -0.875rem + 8.333vw, 1.5rem);
+  width: 100vw;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.accueil ul {
+  list-style-type: none;
+}
+
+.accueil .wp-block-image img {
+  margin: 0 auto;
+}
+
+.nouvelles {
+  margin: 2% 4% 2% 3%;
+}
+
 /* local carrousel
 --------------------------------------------- */
 .carrousel {
