--- a/theme4w4/style.css
+++ b/theme4w4/style.css
@@ -1246,6 +1246,26 @@ Liste des blocs de cours par type_de_cours
 
 .nouvelles {
   margin: 2% 4% 2% 3%;
+  /*------------- ANIMATION DES NOUVELLES 1, 2 ET 3  ---------------*/
+}
+
+.nouvelles figure {
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 5px 8px #EE82EE, 10px 10px 8px CornflowerBlue, 15px 15px 8px MediumSpringGreen;
+  /*------------- ANIMATION DES NOUVELLES 1, 2 ET 3 ---------------*/
+  animation: anim-5 2s both 0.5s;
+}
+
+@keyframes anim-5 {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 /* local carrousel
