--- a/theme4w4/style.css
+++ b/theme4w4/style.css
@@ -1244,6 +1244,7 @@ Liste des blocs de cours par type_de_cours
   margin: 0 auto;
 }
 
+/*------------- AJOUT SCSS SUR LES NOUVELLES 1, 2 ET 3  ---------------*/
 .nouvelles {
   margin: 2% 4% 2% 3%;
   /*------------- ANIMATION DES NOUVELLES 1, 2 ET 3  ---------------*/
@@ -1252,6 +1253,8 @@ Liste des blocs de cours par type_de_cours
 .nouvelles figure {
   border: 1px solid;
   padding: 10px;
+  border-radius: 10px;
+  border: #EE82EE;
   box-shadow: 5px 5px 8px #EE82EE, 10px 10px 8px CornflowerBlue, 15px 15px 8px MediumSpringGreen;
   /*------------- ANIMATION DES NOUVELLES 1, 2 ET 3 ---------------*/
   animation: anim-5 2s both 0.5s;
@@ -1266,6 +1269,14 @@ Liste des blocs de cours par type_de_cours
     opacity: 1;
     transform: scale(1);
   }
+}
+
+.nouvelles p {
+  color: #008080;
+}
+
+.nouvelles section h2 {
+  color: #2F4F4F;
 }
 
 /* local carrousel
