--- a/theme4w4/style.css
+++ b/theme4w4/style.css
@@ -1643,4 +1643,7 @@ site-branding, #primary, #colophon {
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+/* local formulaire
+--------------------------------------------- */
 /*# sourceMappingURL=style.css.map */
