--- a/theme4w4/sass/style.scss
+++ b/theme4w4/sass/style.scss
@@ -130,3 +130,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* local formulaire
 --------------------------------------------- */
 @import "local/formulaire";
+
+/* local page
+--------------------------------------------- */
+@import "local/page";
