--- a/theme4w4/sass/style.scss
+++ b/theme4w4/sass/style.scss
@@ -134,3 +134,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* local page
 --------------------------------------------- */
 @import "local/page";
+
+/* local sidebar
+--------------------------------------------- */
+@import "local/sidebar";
