--- a/bal-sara-emilia-4w4/style.css
+++ b/bal-sara-emilia-4w4/style.css
@@ -1666,6 +1666,7 @@ site-branding, #primary, #colophon {
 --------------------------------------------- */
 #secondary {
   padding-left: 4%;
+  padding-right: 4%;
 }
 
 .widget-title {
