--- a/bal-sara-emilia-4w4/sass/local/_galerie.scss
+++ b/bal-sara-emilia-4w4/sass/local/_galerie.scss
@@ -10,6 +10,11 @@
         width: 150px;
         height: 150px;
         perspective: 1000px;
+        transform: scale(1);
+      }
+
+      .flip-card:hover{
+        transform: scale(1.5);
       }
       
       .flip-card-inner {
