--- a/bal-sara-emilia-4w4/sass/local/_page.scss
+++ b/bal-sara-emilia-4w4/sass/local/_page.scss
@@ -1,3 +1,4 @@
+/*------------- AGRANDISSEMENT DES TITRES DES PAGES AUTRE QUE LA PAGE D'ACCUEIL  ---------------*/
 .entry-header{
     .entry-title{
         font-size: 3rem;
