--- a/bal-sara-emilia-4w4/sass/local/_sidebar.scss
+++ b/bal-sara-emilia-4w4/sass/local/_sidebar.scss
@@ -1,8 +1,10 @@
+/*------------- AJOUT D'ESPACE GAUCHE/DROITE POUR LE SIDEBAR  ---------------*/
 #secondary{
 	padding-left: 4%;
 	padding-right: 4%;
 }
 
+/*------------- CHANGEENT DE COULEUR POUR LE TITRE  ---------------*/
 .widget-title{
 	//margin-top: 5rem;
 	color: #2F4F4F;
