--- a/bal-sara-emilia-4w4/style.css
+++ b/bal-sara-emilia-4w4/style.css
@@ -649,6 +649,7 @@ textarea {
 --------------------------------------------------------------*/
 .site {
   display: grid;
+  /*------------- AJOUT D'UNE VERSION MOBILE ET DESKTOP ---------------*/
   grid-template-columns: 100%;
   grid-template-areas: "header header" "main main" "sidebar sidebar" "footer footer";
 }
@@ -671,6 +672,7 @@ textarea {
   /* Resolves issue with <pre> elements forcing full width. */
 }
 
+/*------------- AJOUT D'UNE COULEUR DE FOND POUR LE SIDEBAR  ---------------*/
 .widget-area {
   grid-area: sidebar;
   margin-left: 2rem;
@@ -1289,34 +1291,6 @@ Liste des blocs de cours par type_de_cours
   color: #2F4F4F;
 }
 
-.admin-rapid {
-  display: flex;
-  flex-direction: column;
-}
-
-.admin-rapid h3 {
-  color: #696969;
-  text-align: center;
-}
-
-.admin-rapid input {
-  background-color: #D8FDD8;
-  border: 1px solid #8FBC8F;
-}
-
-.admin-rapid textarea {
-  background-color: #D8FDD8;
-  border: 1px solid #8FBC8F;
-  margin-top: 5px;
-}
-
-.admin-rapid button {
-  background-color: #8FBC8F;
-  border: #2F4F4F;
-  color: #2F4F4F;
-  margin-top: 10px;
-}
-
 /* local carrousel
 --------------------------------------------- */
 .carrousel {
@@ -1616,6 +1590,7 @@ header .entry-title {
   flex-direction: row;
   margin: 3%;
   justify-content: space-between;
+  /*------------- AJOUT D'ANIMATION DES IMAGES EN SCALE  ---------------*/
 }
 
 .galerie .flip-card {
@@ -1623,6 +1598,7 @@ header .entry-title {
   width: 150px;
   height: 150px;
   perspective: 1000px;
+  /*------------- AJOUT D'ANIMATION DES IMAGES EN SCALE  ---------------*/
   transform: scale(1);
 }
 
@@ -1689,19 +1665,51 @@ site-branding, #primary, #colophon {
 
 /* local formulaire
 --------------------------------------------- */
+/*------------- AJOUT SCSS DANS LE FORMULAIRE DE NOUVELLES  ---------------*/
+.admin-rapid {
+  display: flex;
+  flex-direction: column;
+}
+
+.admin-rapid h3 {
+  color: #696969;
+  text-align: center;
+}
+
+.admin-rapid input {
+  background-color: #D8FDD8;
+  border: 1px solid #8FBC8F;
+}
+
+.admin-rapid textarea {
+  background-color: #D8FDD8;
+  border: 1px solid #8FBC8F;
+  margin-top: 5px;
+}
+
+.admin-rapid button {
+  background-color: #8FBC8F;
+  border: #2F4F4F;
+  color: #2F4F4F;
+  margin-top: 10px;
+}
+
 /* local page
 --------------------------------------------- */
+/*------------- AGRANDISSEMENT DES TITRES DES PAGES AUTRE QUE LA PAGE D'ACCUEIL  ---------------*/
 .entry-header .entry-title {
   font-size: 3rem;
 }
 
 /* local sidebar
 --------------------------------------------- */
+/*------------- AJOUT D'ESPACE GAUCHE/DROITE POUR LE SIDEBAR  ---------------*/
 #secondary {
   padding-left: 4%;
   padding-right: 4%;
 }
 
+/*------------- CHANGEENT DE COULEUR POUR LE TITRE  ---------------*/
 .widget-title {
   color: #2F4F4F;
 }
