--- a/bal-sara-emilia-4w4/sass/local/_formulaire.scss
+++ b/bal-sara-emilia-4w4/sass/local/_formulaire.scss
@@ -27,4 +27,10 @@
         color: #2F4F4F;
         margin-top: 10px;
     }
+
+    button:hover{
+        background-color: #D8FDD8;
+        border: #2F4F4F;
+        cursor: pointer;
+    }
 }
